Add accessibility tag `aria-hidden="true"`

--- a/mechanical-metal/src/components/navbar.astro
+++ b/mechanical-metal/src/components/navbar.astro
@@ -248,7 +248,7 @@ import NavMenu from "./navMenu.astro";
         >Contact</button
       >
     </div>
-    <div class="menu hidden">
+    <div class="menu hidden" aria-hidden="true">
       <button id="menu-btn" class="outline-btn">
         <svg
           xmlns="http://www.w3.org/2000/svg"
