Add accessibility tag `aria-hidden="true"`

--- a/mechanical-metal/src/components/navMenu.astro
+++ b/mechanical-metal/src/components/navMenu.astro
@@ -4,7 +4,7 @@
 
 <!-- TODO: Refactor this mess and build out tray -->
 
-<div class="nav-links hidden">
+<div class="nav-links hidden" aria-hidden="true">
   <button
     id="theme-toggle"
     class="theme-toggle"
