add margin for greeting headings

--- a/mechanical-metal/src/components/homeBanner.astro
+++ b/mechanical-metal/src/components/homeBanner.astro
@@ -77,9 +77,10 @@ import bannerImage from "../images/silver-dunes.webp";
     }
     .greeting {
       font-size: 4rem;
+      margin: 0 var(--spacing3);
     }
     .greeting-box1 {
-      margin-left: 0;
+      align-self: flex-end;
     }
     .visual-box {
       margin-top: var(--spacing3);
