Fix email input `name` attribute value

--- a/mechanical-metal/src/components/contactForm.astro
+++ b/mechanical-metal/src/components/contactForm.astro
@@ -36,7 +36,7 @@
           required
           class="margin2"
           type="email"
-          name="name"
+          name="email"
           id="email-input"
           placeholder="Your email address"
           maxlength="128"
