--- a/mechanical-metal/src/components/contactForm.astro
+++ b/mechanical-metal/src/components/contactForm.astro
@@ -90,7 +90,7 @@
     </form>
   </div>
   <small>
-    Note: I don't retain any of your information nor do I sell it to any thrid
+    Note: I don't retain any of your information nor do I sell it to any third
     party, because that's gross.</small
   >
 </section>
