Implement open and close animaitons for drop menus

--- a/mechanical-metal/src/styles/styles.css
+++ b/mechanical-metal/src/styles/styles.css
@@ -442,6 +442,28 @@ dialog::backdrop {
 
 }
 
+@keyframes pullTray {
+    from {
+        top: -230px;
+    }
+
+    to {
+        top: 80px;
+    }
+}
+
+@keyframes closeTray {
+    from {
+        top: 80px;
+    }
+
+    to {
+        top: -230px;
+    }
+
+}
+
+
 /* Responsiveness */
 
 
